登陆 和一部分简单的查文章未完善

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#mapper Ó³ÉäÎÄ¼ş
+mybatis.mapper-locations=classpath:mapper/*.xml 
+mybatis.type-aliases-package=com.springboot.news_.entity
